--- a/src/main/resources/templates/verify_account.html
+++ b/src/main/resources/templates/verify_account.html
@@ -166,7 +166,7 @@
                 <!-- start copy -->
                 <tr>
                     <td align="left" bgcolor="#ffffff" style="padding: 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px;">
-                        <p style="margin: 0;">Tap the button below to confirm your email address. If you didn't create an account with <a href="https://blogdesire.com">Paste</a>, you can safely delete this email.</p>
+                        <p style="margin: 0;">Tap the button below to confirm your email address. If you didn't create an account with <a href="https://keen-semifreddo-66d931.netlify.app/">Puzzle</a>, you can safely delete this email.</p>
                     </td>
                 </tr>
                 <!-- end copy -->
@@ -180,7 +180,7 @@
                                     <table border="0" cellpadding="0" cellspacing="0">
                                         <tr>
                                             <td align="center" bgcolor="#1a82e2" style="border-radius: 6px;">
-                                                <a href="${verify_url}" target="_blank" style="display: inline-block; padding: 16px 36px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; color: #ffffff; text-decoration: none; border-radius: 6px;">Do Something Sweet</a>
+                                                <a href="${verify_url}" target="_blank" style="display: inline-block; padding: 16px 36px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; color: #ffffff; text-decoration: none; border-radius: 6px;">Verify account</a>
                                             </td>
                                         </tr>
                                     </table>
@@ -195,7 +195,7 @@
                 <tr>
                     <td align="left" bgcolor="#ffffff" style="padding: 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px;">
                         <p style="margin: 0;">If that doesn't work, copy and paste the following link in your browser:</p>
-                        <p style="margin: 0;"><a href="https://blogdesire.com" target="_blank">https://blogdesire.com/xxx-xxx-xxxx</a></p>
+                        <p style="margin: 0;"><a href="${verify_url}" target="_blank">https://keen-semifreddo-66d931.netlify.app/</a></p>
                     </td>
                 </tr>
                 <!-- end copy -->
