--- a/src/main/resources/templates/thymeleaf/invoice.html
+++ b/src/main/resources/templates/thymeleaf/invoice.html
@@ -106,7 +106,7 @@
                                 <td class="no-line"></td>
                                 <td class="no-line"></td>
                                 <td class="no-line text-center"><strong>Total</strong></td>
-                                <td class="no-line text-right" th:text="'$'${invoice.total}">$685.99</td>
+                                <td class="no-line text-right" th:text="${invoice.total}">$685.99</td>
                             </tr>
                             </tbody>
                         </table>
