apply new filter from old filter payload, add unit test for common controller

--- a/src/main/resources/templates/failed.html
+++ b/src/main/resources/templates/failed.html
@@ -66,6 +66,7 @@
         <i class="cancel">✘</i>
     </div>
     <h1>Failed</h1>
+    <span th:text="${messages}"></span>
     <p>Try again later!</p>
     <br>
     <br>
